--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,9 @@
 [versions]
-agp = "8.13.2"
-kotlin = "2.1.10"
+agp = "9.0.1"
+coilCompose = "2.7.0"
+geckoview = "147.0.20260203002554"
+iconsMaterialSymbolsOutlinedCmp = "2.2.1"
+kotlin = "2.3.10"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
@@ -17,6 +20,10 @@ animation = "1.10.3"
 [libraries]
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+geckoview = { module = "org.mozilla.geckoview:geckoview", version.ref = "geckoview" }
+icons-material-symbols-outlined-cmp = { module = "com.composables:icons-material-symbols-outlined-cmp", version.ref = "iconsMaterialSymbolsOutlinedCmp" }
+icons-material-symbols-outlined-filled-cmp = { module = "com.composables:icons-material-symbols-outlined-filled-cmp", version.ref = "iconsMaterialSymbolsOutlinedCmp" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
