feat: use spotify's internal api instead of dom interactions

--- a/app/src/main/assets/unspot/manifest.json
+++ b/app/src/main/assets/unspot/manifest.json
@@ -11,17 +11,17 @@
   "content_scripts": [
     {
       "matches": ["*://*.spotify.com/*"],
-      "js": ["messaging.js"]
+      "js": ["messagingWrapper.js"]
     },
     {
       "matches": ["*://*.spotify.com/*"],
-      "js": ["adblock.js"],
+      "js": ["messaging.js"],
       "run_at": "document_start",
       "world": "MAIN"
     },
     {
       "matches": ["*://*.spotify.com/*"],
-      "js": ["hook.js"],
+      "js": ["adblock.js"],
       "run_at": "document_start",
       "world": "MAIN"
     }
